SERVER-31028 Reload shard registry and ensure set of shards hasn't changed when establishing sharded change stream cursors